8320533: Capstone v6 hsdis aarch64 integration not working

* `CAPSTONE_ARCH` for aarch64 in v6 is `CS_ARCH_AARCH64` instead
of `CS_ARCH_ARM64`.
* The `-Daarch64` macro is getting in the way with this new version,
and it's causing invalid C to be produced.
Undefined it before including `capstone.h`.